tests/invalid/constrained_poly_insts.err_exp
constrained_poly_insts.m:006: Error: no mode declaration for exported predicate
constrained_poly_insts.m:006:   `constrained_poly_insts.p'/2.
constrained_poly_insts.m:007: Error: inconsistent constraints on inst variables
constrained_poly_insts.m:007:   in predicate mode declaration:
constrained_poly_insts.m:007:   p(in(I), out((I =< any))).
constrained_poly_insts.m:009: Error: inconsistent constraints on inst variables
constrained_poly_insts.m:009:   in `:- pred' declaration:
constrained_poly_insts.m:009:   q((T :: in((I =< free))), (T :: out((I =<
constrained_poly_insts.m:009:   bound(c))))).
constrained_poly_insts.m:012: Error: inconsistent constraints on inst variables
constrained_poly_insts.m:012:   in function mode declaration:
constrained_poly_insts.m:012:   (r(in(I)) = out((I =< free))).
constrained_poly_insts.m:014: Error: inconsistent constraints on inst variables
constrained_poly_insts.m:014:   in function declaration:
constrained_poly_insts.m:014:   (s((T :: in((I =< ground)))) = (T :: out((I =<
constrained_poly_insts.m:014:   unique)))).
constrained_poly_insts.m:023: Error: clause for predicate
constrained_poly_insts.m:023:   `constrained_poly_insts.q'/2
constrained_poly_insts.m:023:   without corresponding `:- pred' declaration.
constrained_poly_insts.m:023: Error: no mode declaration for predicate `q'/2.
constrained_poly_insts.m:023: Inferred :- pred q(T1, T1).
constrained_poly_insts.m:025: Error: clause for function
constrained_poly_insts.m:025:   `constrained_poly_insts.s'/1
constrained_poly_insts.m:025:   without corresponding `:- func' declaration.
constrained_poly_insts.m:025: Inferred :- func s(T1) = T1.
constrained_poly_insts.m:027: In clause for `t(in((I =< ground)), out((I =<
constrained_poly_insts.m:027:   ground)))':
constrained_poly_insts.m:027:   mode error: argument 2 became too instantiated.
constrained_poly_insts.m:027:   Final instantiatedness of `HeadVar__2' was
constrained_poly_insts.m:027:   `unique(42)',
constrained_poly_insts.m:027:   expected final instantiatedness was `(I =<
constrained_poly_insts.m:027:   ground)'.
For more information, recompile with `-E'.
